@@ -1,3 +1,5 @@
+// -*- C++ -*-
+//
 // $Id$
 
 /**
@@ -26,6 +28,7 @@ namespace CORBA
   class ORB;
   typedef ORB *ORB_ptr;
 }
+TAO_END_VERSIONED_NAMESPACE_DECL
 
 namespace CIAO
 {
@@ -36,9 +39,9 @@ namespace CIAO
    * should be call right after ORB initialization but we should try
    * to register these stuff automatically.
    */
-	CIAO_CLIENT_Export int Client_init (CORBA::ORB_ptr o);
+  CIAO_CLIENT_Export int Client_init (CORBA::ORB_ptr o);
 }
-TAO_END_VERSIONED_NAMESPACE_DECL
+
 
 #include /**/ "ace/post.h"
 #endif /* CIAO_CLIENT_INIT_H */
